# gestao

01_SISTEMA/fisio-gestao-frontend/: index.html  package.json
01_SISTEMA/fisio-gestao-frontend/src/: App.jsx
01_SISTEMA/fisio-gestao-frontend/src/components/: Header.jsx  Sidebar.jsx
01_SISTEMA/fisio-gestao-frontend/src/pages/: Dashboard.jsx  PacienteDetalhes.jsx  Pacientes.jsx  PacientesSimples.jsx  index.jsx
01_SISTEMA/fisio_gestao_backend/: RELATORIO_TESTES.md  pyproject.toml
01_SISTEMA/fisio_gestao_backend/src/: main.py
01_SISTEMA/fisio_gestao_backend/src/audit/: audit_service.py
01_SISTEMA/fisio_gestao_backend/src/auth/: auth_service.py
01_SISTEMA/fisio_gestao_backend/src/database/: app.db
01_SISTEMA/fisio_gestao_backend/src/models/: fisio_models.py
01_SISTEMA/fisio_gestao_backend/src/routes/: agendamentos.py  auth.py  avaliacoes.py  evolucoes.py  lgpd.py  pacientes.py  procedimentos.py
01_SISTEMA/fisio_gestao_backend/src/static/: index.html
01_SISTEMA/fisio_gestao_backend/tests/: __init__.py  test_sistema.py
02_DOCUMENTACAO/: ENTREGA_FINAL.md  README.md  RESUMO_EXECUTIVO.md
03_CONFORMIDADE_LEGAL/: arquitetura_tecnologias.md  cdc_saude_acesso_prontuario.md  cif_overview.md  coffito_prontuario_requisitos.md
