[tool.poetry]
name = "fisio-gestao-backend"
version = "0.1.0"
description = "Backend do sistema FisioGestão"
authors = ["Autor Desconhecido"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.9.0"
click = "8.2.1"
Flask = "3.1.1"
flask-cors = "6.0.0"
Flask-SQLAlchemy = "3.1.1"
greenlet = "3.2.3"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
MarkupSafe = "3.0.2"
SQLAlchemy = "2.0.41"
typing_extensions = "4.14.0"
Werkzeug = "3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"